# CCBasicCore

./: .gitignore  CMakeLists.txt  README.md
cmake/: platform_detection.cmake
data_structure/: CMakeLists.txt
data_structure/deque/: CMakeLists.txt  deque_impl.h  deque_interface.c  deque_interface.h  deque_list.c  deque_list.h  deque_vector.c  deque_vector.h
data_structure/errors/: CMakeLists.txt  Error.c  Error.h
data_structure/list/: CMakeLists.txt  list.c  list.h
data_structure/map/: CMakeLists.txt  map.c  map.h  map_node.c  map_node.h  map_node_treap.c  unorder_map.c  unorder_map.h
data_structure/queue/: CMakeLists.txt  queue_impl.h  queue_interface.c  queue_interface.h  queue_list.c  queue_list.h  queue_vector.c  queue_vector.h
data_structure/set/: CMakeLists.txt  set.c  set.h  unorder_set.c  unorder_set.h
data_structure/stack/: CMakeLists.txt  stack_impl.h  stack_interface.c  stack_interface.h  stack_list.c  stack_list.h  stack_vector.c  stack_vector.h
data_structure/string/: CMakeLists.txt  ccstring.c  ccstring.h
data_structure/utils/: CMakeLists.txt  compares.h  result_pack.c  result_pack.h  utils_def.c  utils_def.h
data_structure/utils/memory_behave/: memory_behave.c
data_structure/vector/: CMakeLists.txt  vector.c  vector.h
example/: CMakeLists.txt
example/thread/: CMakeLists.txt  cond_var_example.c  mutex_example.c  thread_runner_example.c
platform/: CMakeLists.txt
platform/memory_allocation/: CMakeLists.txt  README.md  memory_allocation.h  memory_allocation_tools.h
platform/memory_allocation/native/: CMakeLists.txt  memory_allocation_impl.c
platform/thread_impl/: CMakeLists.txt
platform/thread_impl/common/: cond_var_impl.h  mutex_impl.h  thread_impl_helper.h  thread_impl_interface.h
platform/thread_impl/posix/: CMakeLists.txt  posix_condvar_impl.c  posix_mutex_bkend.c  posix_thread_bkend.c
test/: CMakeLists.txt
test/data_structure/: CMakeLists.txt  test_cstring.c  test_deque_list.c  test_deque_vector.c  test_list_stack.c  test_list_with_deep.c  test_map.c  test_queue.c  test_set.c  test_unorder_map.c  test_unordered_set.c  test_vector.c  test_vector_deep.c  test_vector_stack.c
test/platform/: CMakeLists.txt  test_memory_allocation.c
test/thread/: CMakeLists.txt  test_condvar.c  test_mutex.c  test_thread.c
thread/: CMakeLists.txt
thread/condition_variable/: CMakeLists.txt  cond_var.c  cond_var.h
thread/mutex/: CMakeLists.txt  mutex.c  mutex.h
thread/thread/: CMakeLists.txt  thread.c  thread.h  thread_defs.h
utils/: CMakeLists.txt  result_pack.c
utils/errors/: Error.h
utils/memory_behave/: memory_behave.c  memory_behave.h
