add_executable(test_vector test_vector.c)
target_link_libraries(test_vector PRIVATE DataStructure)

add_executable(test_vector_deep test_vector_deep.c)
target_link_libraries(test_vector_deep PRIVATE DataStructure)

add_executable(test_list_with_deep test_list_with_deep.c)
target_link_libraries(test_list_with_deep PRIVATE DataStructure)

add_executable(test_vector_stack test_vector_stack.c)
target_link_libraries(test_vector_stack PRIVATE DataStructure)

add_executable(test_list_stack test_list_stack.c)
target_link_libraries(test_list_stack PRIVATE DataStructure)

add_executable(test_queue test_queue.c)
target_link_libraries(test_queue PRIVATE DataStructure)

add_executable(test_deque_list test_deque_list.c)
target_link_libraries(test_deque_list PRIVATE DataStructure)

add_executable(test_deque_vector test_deque_vector.c)
target_link_libraries(test_deque_vector PRIVATE DataStructure)

add_executable(test_map test_map.c)
target_link_libraries(test_map PRIVATE DataStructure)

add_executable(test_unorder_map test_unorder_map.c)
target_link_libraries(test_unorder_map PRIVATE DataStructure)
